--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,18 +34,57 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.6
+  cupertino_icons: ^1.0.8
+  # for state management
+  flutter_bloc: ^8.1.5
+  # To save data locally
+  shared_preferences: ^2.2.3
+  # for localization
+  easy_localization: ^3.0.7
+  # Assets generator
+  flutter_gen: ^5.5.0+1
+  flutter_svg: ^2.0.10+1
+  # for google fonts
+  google_fonts: ^6.2.1
+  # Device info
+  device_info_plus: ^10.1.0
+  package_info_plus: ^8.0.0
+  # Freezed code generator for data classes
+  freezed_annotation: ^2.4.1
+  json_annotation: ^4.9.0
+  # for device preview
+  device_preview: ^1.1.0
+  # for spacing
+  gap: ^3.0.1
+  # To pick files
+  image_picker: ^1.1.1
+  # for Permissions
+  permission_handler: ^11.3.1
+  # for api calls
+  codonnier_network:
+    git:
+      url: https://github.com/priyankgandhi0/codonnier_network.git
+      ref: main
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.4.9
+  freezed: ^2.5.2
+  json_serializable: ^6.8.0
+  flutter_gen_runner: ^5.4.0
+  flutter_lints: ^4.0.0
+
+flutter_gen:
+  integrations:
+    flutter_svg: true
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -59,9 +98,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+    - assets/icons/
+    - assets/translations/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -74,6 +114,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+    - family: AvenirNextLTPro
+      fonts:
+        - asset: assets/fonts/AvenirNextLTPro-Regular.otf
   # fonts:
   #   - family: Schyler
   #     fonts:
